swagger & auth
correct schemas in swagger. implementation route patch for auth (without load file)
