# controllers/auth/getCurrent.js
@@ -1,7 +1,7 @@
 const getCurrent = async (req, res) => {
-  const { name, email } = req.user;
+  const { name, email, phone, birthday, city, avatarURL } = req.user;
 
-  res.json({ name, email });
+  res.json({ user: { name, email, phone, birthday, city, avatarURL } });
 };
 
 module.exports = getCurrent;
