# models/user/schemaDb.js
@@ -1,35 +1,51 @@
-const { Schema, model } = require("mongoose");
+const { Schema, model } = require('mongoose');
 
-const { emailRegexp } = require("../../constants");
+const { emailRegexp } = require('../../constants');
 
-const { handleMongooseError } = require("../../helpers");
+const { handleMongooseError } = require('../../helpers');
 
 const userSchema = new Schema(
   {
     name: {
       type: String,
-      required: [true, "Name is required"],
+      required: [true, 'Name is required'],
     },
     email: {
       type: String,
       match: emailRegexp,
-      required: [true, "Email is required"],
+      required: [true, 'Email is required'],
       unique: true,
     },
     password: {
       type: String,
-      required: [true, "Set password for user"],
+      required: [true, 'Set password for user'],
+    },
+    phone: {
+      type: String,
+      default: '',
+    },
+    birthday: {
+      type: String,
+      default: '',
+    },
+    city: {
+      type: String,
+      default: '',
+    },
+    avatarURL: {
+      type: String,
+      default: '',
     },
     token: {
       type: String,
-      default: "",
+      default: '',
     },
   },
   { versionKey: false, timestamps: true }
 );
 
-userSchema.post("save", handleMongooseError);
+userSchema.post('save', handleMongooseError);
 
-const User = model("user", userSchema);
+const User = model('user', userSchema);
 
 module.exports = User;
