# models/user/schemaJoi.js
@@ -1,9 +1,9 @@
-const Joi = require("joi");
+const Joi = require('joi');
 
-const { emailRegexp } = require("../../constants");
+const { emailRegexp } = require('../../constants');
 
 const registerSchema = Joi.object({
-  name: Joi.string().min(2).max(16),
+  name: Joi.string().min(2).max(16).required(),
   email: Joi.string().pattern(emailRegexp).required(),
   password: Joi.string().min(6).max(16).required(),
 });
@@ -13,7 +13,16 @@ const loginSchema = Joi.object({
   password: Joi.string().min(6).required(),
 });
 
+const updateSchema = Joi.object({
+  name: Joi.string().min(2).max(16),
+  email: Joi.string().pattern(emailRegexp).min(1),
+  phone: Joi.string(),
+  birthday: Joi.string(),
+  city: Joi.string(),
+});
+
 module.exports = {
   registerSchema,
   loginSchema,
+  updateSchema,
 };
